--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,8 @@ Mkfile.old
 dkms.conf
 /Debug/
 /Modulus.exe.stackdump
+/.idea/
+/src/cmake-build-debug/
+/cmake-build-release-mingw/
+/cmake-build-debug/
+/cmake-build-debug-mingw/
