Remove platform.h.in header generation file
This platform.h generator was needless as it did not use any variables from CMake for generating platform-specific information.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
 project(Modulus)
-
 set(CMAKE_MODULE_PATH ./build/)
 set(PROJECT_SOURCE_DIR ./src/)
 set(CONFIGURE_INPUT ./build/configuration/)
@@ -11,7 +10,7 @@ if (CYGWIN OR MINGW OR MSYS OR UNIX)
     # set warnings
     add_compile_options(-Wall -Wpedantic -Werror=pedantic -Wextra)
     # ubsan (undefined, address, pointer-compare, pointer-subtract, leak)
-    add_compile_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
+    #add_compile_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
     if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
         add_compile_options(-g3 -Og)
     else ()
@@ -19,6 +18,5 @@ if (CYGWIN OR MINGW OR MSYS OR UNIX)
     endif ()
 endif ()
 # configuration files
-configure_file(${CONFIGURE_INPUT}/platform.h.in ${PROJECT_SOURCE_DIR}/include/platform.h)
 configure_file(${CONFIGURE_INPUT}/project.h.in ${PROJECT_SOURCE_DIR}/include/project.h)
 add_subdirectory(${PROJECT_SOURCE_DIR})
