Implement __m_init_cpu_info; rename debug.c to error.c and associated header files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ if (CYGWIN OR MINGW OR MSYS OR UNIX)
     # set warnings
     add_compile_options(-Wall -Wpedantic -Werror=pedantic -Wextra)
     # ubsan (undefined, address, pointer-compare, pointer-subtract, leak)
-    add_compile_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
-    add_link_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
+    #add_compile_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
+    #add_link_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
     if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
         add_compile_options(-g3 -Og)
     else ()
