--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-project(Modulus)
-add_executable(Modulus modulus.c compiler.c error.c memory.c platform.c)
-target_include_directories(Modulus PRIVATE ./include/)
+project(Pax)
+add_executable(Pax pax.c compiler.c error.c memory.c platform.c)
+target_include_directories(Pax PRIVATE ./include/)
