--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 project(Catholicus)
-add_executable(Catholicus catholicus.c compiler.c error.c memory.c platform.c language/dedicated_parser.h language/dedicated_parser.c)
+add_executable(Catholicus catholicus.c compiler.c error.c memory.c platform.c reference_vm.h reference_vm.c pattern.h pattern.c binary_trie.c binary_trie.h)
 target_include_directories(Catholicus PRIVATE ./include/)
