--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
 project(Catholicus)
-add_executable(Catholicus catholicus.c compiler.c error.c memory.c platform.c reference_vm.h reference_vm.c pattern.h pattern.c binary_trie.c binary_trie.h)
-target_include_directories(Catholicus PRIVATE ./include/)
+add_executable(Catholicus catholicus.c compiler.c error.c memory.c platform.c reference_vm.h reference_vm.c pattern.h pattern.c bit_trie.c bit_trie.h math/bit_math.h associative_array.c associative_array.h)
+target_include_directories(Catholicus PRIVATE ./include/ ./math/)
