--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ if (CYGWIN OR MINGW OR MSYS OR UNIX)
     add_compile_options(-std=gnu2x)
     # set warnings
     add_compile_options(-Wall -Wfatal-errors -Wextra -Wno-unknown-pragmas)
-    # ubsan (undefined, address, pointer-compare, pointer-subtract, leak)
-    #add_compile_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
-    #add_link_options(-fsanitize=undefined -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=leak)
+    # ubsan (undefined, address, m_object-compare, m_object-subtract, leak)
+    #add_compile_options(-fsanitize=undefined -fsanitize=address -fsanitize=m_object-compare -fsanitize=m_object-subtract -fsanitize=leak)
+    #add_link_options(-fsanitize=undefined -fsanitize=address -fsanitize=m_object-compare -fsanitize=m_object-subtract -fsanitize=leak)
     if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
         add_compile_options(-g3 -Og -O0)
     else ()
